crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/comparison_operators/via_common_supertype/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Operator == cannot be applied to operands of type "DerivedA" and "DerivedB".
   ╭─[input.sol:7:9]
   │
 7 │         da == db;
   │         ────┬───  
   │             ╰───── Error occurred here.
───╯
